deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world-deployment
  namespace: itransition
  labels:
    app: hello-world
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hello-world
  template:
    metadata:
      labels:
        app: hello-world
    spec:
      containers:
      - name: hello-world
        image: crccheck/hello-world
        ports:
        - containerPort: 8000

---
apiVersion: v1
kind: Service
metadata:
  name: helloworld
  namespace: itransition
spec:
  type: ClusterIP
  selector:
    app: hello-world
  ports:
  - protocol: TCP
    port: 8000
    targetPort: 8000
