manifest.yml
apiVersion: v1
kind: Pod
metadata:
  name: webserver
  namespace: my-app
  labels:
    role: nginx
spec:
  containers:
  - name: webserver
    image: nginx:latest
    ports:
    - containerPort: 80
  - name: webwatcher
    image: afakharany/watcher:latest

---
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: my-app
spec:
  type: NodePort
  selector:
    role: nginx
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
