ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-wildcard-host
  namespace: itransition
spec:
  rules:
  - host: www.howhigh.club
    http:
      paths:
      - pathType: Prefix
        path: "/itransition"
        backend:
          service:
            name: helloworld
            port:
              number: 8000
